--- a/views/admin/orderDetailsAdmin.ejs
+++ b/views/admin/orderDetailsAdmin.ejs
@@ -12,55 +12,73 @@
    
                     <% product.forEach( item => { %>
                    
-                        <div class="flex flex-col lg:flex-col items-center py-6 gap-6 w-full">
-                    <div class="flex flex-row img-box max-lg:w-full">
+                        <div class="flex flex-col lg:flex-col items-center py-6 gap-6 w-full ">
+                    <div class="flex flex-row img-box max-lg:w-full bg-white rounded-lg">
                         <img src="/product_images/<%= item.productImage[0] %>" alt="product image" 
-                            class="aspect-square w-full lg:max-w-[140px] mx-8 rounded-s-xl">
+                            class="aspect-square w-full lg:max-w-[140px] mx-8">
                     
                     <div class="flex  items-center w-full ">
                         <div class="grid grid-cols-1 lg:grid-cols-2 w-full">
                             <div class="flex items-center">
-                                <div class="">
-                                    <h2 class="font-semibold text-xl leading-8 text-black mb-3 ">
+                                <div class=" ml-12">
+                                    <h2 class="font-semibold text-xl leading-8 text-black mb-3">
                                        <%= item.productName %></h2>
                                     <p class="font-normal text-lg leading-8 text-gray-500 mb-3">
-                                        Diamond Dials</p>
+                                        <%= item.color %></p>
                                     <div class="flex items-center  ">
                                         <p
                                             class="font-medium text-base leading-7 text-black pr-4 mr-4 border-r border-gray-200">
-                                            Size: <span class="text-gray-500"> <%= item.Size %></span></p>
+                                            Size: <span class="text-gray-500"> <%= item.size %></span></p>
                                         <p class="font-medium text-base leading-7 text-black ">Qty: <span
                                                 class="text-gray-500"> <%= item.stock %></span></p>
                                     </div>
                                 </div>
-
-                            </div>
-                            <div class="grid grid-cols-5">
-                                <div class="col-span-5 lg:col-span-1 flex items-center max-lg:mt-3">
+                                <div class="col-span-5 lg:col-span-1 flex items-center max-lg:mt-3 ml-24">
                                     <div class="flex gap-3 lg:block">
-                                        <p class="font-medium text-sm leading-7 text-black">price</p>
-                                        <p class="lg:mt-4 font-medium text-sm leading-7 text-indigo-600">$100</p>
+                                        <p class="font-medium text-sm leading-7 text-black">Email</p>
+                                        <p class="lg:mt-4 font-medium text-sm leading-7 text-indigo-600"><%= user.email %>₹</p>
                                     </div>
                                 </div>
+
+
+                            </div>
+                            <div class="grid grid-cols-6">
+                                <div class="col-span-5 lg:col-span-1 flex items-center max-lg:mt-3 ml-5">
+                                    <div class="flex gap-3 lg:block">
+                                        <p class="font-medium text-sm leading-7 text-black">price</p>
+                                        <p class="lg:mt-4 font-medium text-sm leading-7 text-indigo-600"><%= item.price %>₹</p>
+                                    </div>
+                                </div>
+
+
                                 <div class="col-span-5 lg:col-span-2 flex items-center max-lg:mt-3 ">
                                     <div class="flex gap-3 lg:block">
-                                        <p class="font-medium text-sm leading-7 text-black">Status
+                                        <p class="font-medium text-sm leading-7 text-black">Payment Method
                                         </p>
                                         <p
                                             class="font-medium text-sm leading-6 py-0.5 px-3 whitespace-nowrap rounded-full lg:mt-3 bg-indigo-50 text-indigo-600">
-                                            Dispatched</p>
+                                            Razor Pay</p>
                                     </div>
 
                                 </div>
+
+
+                              
                                 <div class="col-span-5 lg:col-span-2 flex items-center max-lg:mt-3">
                                     <div class="flex gap-3 lg:block">
                                         <p class="font-medium text-sm whitespace-nowrap leading-6 text-black">
-                                            Expected Delivery Time</p>
+                                          Shipping Address </p>
                                         <p class="font-medium text-base whitespace-nowrap leading-7 lg:mt-3 text-emerald-500">
-                                            23rd March 2021</p>
+                                             <%= address.address %>, <%= address.city %>, <%= address.state %></p>
+                                       
+                                        <p class="font-medium text-base whitespace-nowrap leading-7 lg:mt-3 text-emerald-500">
+                                             <%= address.country %>, <%= address.pincode %></p>
                                     </div>
 
                                 </div>
+
+
+
                             </div>
                         </div>
 
