coupon inserted to db

--- a/views/admin/coupon-add.ejs
+++ b/views/admin/coupon-add.ejs
@@ -22,30 +22,30 @@
               <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 md:grid-cols-5">
                 <div class="md:col-span-5">
                   <label for="couponCode">Coupon Code</label>
-                  <input type="text" name="couponCode" id="couponCode" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
+                  <input type="text" name="couponCode" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
                 </div>
   
                 <div class="md:col-span-5">
-                  <label for="massage"> Copuon Description </label>
-                  <textarea type="" name="massage" id="massage" class="h-20 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" ></textarea>
+                  <label for="description"> Copuon Description </label>
+                  <textarea type="" name="description" id="description" class="h-20 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" ></textarea>
                 </div>
                 <div class="md:col-span-5">
-                  <label for="massage">Discount </label>
-                  <input type="number" name="text" id="text" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
+                  <label for="discount">Discount </label>
+                  <input type="number" name="discount" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
                 </div>
                 <div class="md:col-span-5">
-                  <label for="massage">Minimum Amount </label>
-                  <input type="number" name="text" id="text" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
+                  <label for="maximumAmount">Minimum Amount </label>
+                  <input type="number" name="maximumAmount" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
                 </div>
                 <div class="md:col-span-5">
-                  <label for="massage">Coupon expiry </label>
-                  <input type="date" name="Date" id="email" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
+                  <label for="expiryDate">Coupon expiry </label>
+                  <input type="date" name="expiryDate" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
                 </div>
 
         
                 <div class="md:col-span-5 text-right mt-5">
                   <div class="inline-flex items-end">
-                    <button class="bg-cyan-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded">Submit</button>
+                    <button type="submit" class="bg-cyan-500 hover:bg-teal-700 text-white font-bold py-2 px-4 rounded">Submit</button>
                   </div>
                 </div>
   
