--- a/views/admin/coupon-add.ejs
+++ b/views/admin/coupon-add.ejs
@@ -22,7 +22,7 @@
               <div class="grid gap-4 gap-y-2 text-sm grid-cols-1 md:grid-cols-5">
                 <div class="md:col-span-5">
                   <label for="couponCode">Coupon Code</label>
-                  <input type="text" name="couponCode" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
+                  <input type="text" name="couponCode" id="couponCode" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
                 </div>
   
                 <div class="md:col-span-5">
@@ -31,15 +31,15 @@
                 </div>
                 <div class="md:col-span-5">
                   <label for="discount">Discount </label>
-                  <input type="number" name="discount" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
+                  <input type="number" name="discount" id="discount" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
                 </div>
                 <div class="md:col-span-5">
                   <label for="maximumAmount">Minimum Amount </label>
-                  <input type="number" name="maximumAmount" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
+                  <input type="number" name="maximumAmount" id="maximumAmount" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
                 </div>
                 <div class="md:col-span-5">
                   <label for="expiryDate">Coupon expiry </label>
-                  <input type="date" name="expiryDate" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
+                  <input type="date" name="expiryDate" id="email" class="h-8 border mt-1 rounded px-4 w-full bg-gray-50 border-gray-300" value="" />
                 </div>
 
         
