--- a/views/admin/coupon-list.ejs
+++ b/views/admin/coupon-list.ejs
@@ -1,106 +1,77 @@
 <%- include('../partials/adminHeader') %>
 
+
+<!-- component -->
+<link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
+<link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
+
 <main>
 
 
-
-  <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
-    <div class="flex items-center justify-between flex-column flex-wrap md:flex-row space-y-4 md:space-y-0 pb-4 bg-white">
-        <div>
-            </button>
-            <!-- Dropdown menu -->
-            <div id="dropdownAction" class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-44 dark:bg-gray-700 dark:divide-gray-600">
-                <ul class="py-1 text-sm text-gray-700 dark:text-gray-200" aria-labelledby="dropdownActionButton">
-                    <li>
-                        <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Reward</a>
-                    </li>
-                    <li>
-                        <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Promote</a>
-                    </li>
-                    <li>
-                        <a href="#" class="block px-4 py-2 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Activate account</a>
-                    </li>
-                </ul>
-                <div class="py-1">
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Delete User</a>
-                </div>
-            </div>
+<section class="py-1 bg-blueGray-50 ">
+<div class="w-full mb-12 xl:mb-0 px-2 mt-16">
+  <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-6 shadow-lg rounded ">
+    <div class="rounded-t mb-0 px-4 border-0">
+      <div class="flex flex-wrap items-center">
+        <div class="relative w-full px-4 max-w-full flex-grow flex-1">
+          <h3 class="font-semibold text-base text-blueGray-700">    </h3>
         </div>
-   
-        <div class="relative">
-            <div class="absolute inset-y-0 rtl:inset-r-0 start-0 flex items-center ps-3 pointer-events-none">
-                <svg class="w-4 h-4 text-gray-500 dark:text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 20 20">
-                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m19 19-4-4m0-7A7 7 0 1 1 1 8a7 7 0 0 1 14 0Z"/>
-                </svg>
-            </div>
-          </div>
+        <div class=" flex-grow flex-1 text-left">
+          <a href="/admin/coupon-add" class="bg-indigo-500 text-white active:bg-indigo-600 text-xs font-bold uppercase px-3 py-1 rounded outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">See all</a>
+        </div>
+      </div>
     </div>
-    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-orange-200  dark:text-gray-400">
-            <tr>
-             
-                <th scope="col" class="px-6 3">Coupon Name</th>
-                <th scope="col" class="px-6 py-3">Created Date</th>
-                <th scope="col" class="px-6 py-3">Expiry Date</th>
-                <th scope="col" class="px-6 py-3">Coupon Code</th>
-            </tr>
+
+    <div class="w-full">
+      <table class="items-center bg-transparent w-full border-collapse ">
+        <thead>
+            
+          <tr>
+            <th class=" bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+                          Coupone Code</th>
+          <th class=" bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+                          Description</th>
+           <th class=" bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+                          Discount</th>
+          <th class=" bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+                          Maximum Amount</th>
+        
+          <th class=" bg-blueGray-50 text-blueGray-500 align-middle border border-solid border-blueGray-100 py-3 text-xs uppercase border-l-0 border-r-0 whitespace-nowrap font-semibold text-left">
+                          Expiry Date</th>
+          </tr>
         </thead>
- 
+
         <tbody>
-
-            <td class="px-6 py-4">
-                <a  class="font-medium font-sans text-xs text-gray-950  hover:underline">
-                   Name
-                  </a>
-               
-               
-              
+            <% coupon.forEach(coup => { %>
+          <tr>
+            <th class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 text-left text-blueGray-700 ">
+                 <%= coup.couponCode %>
+            </th>
+            <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4 ">
+                 <%= coup.description %>
             </td>
-            <td> <a  class="font-medium font-sans text-xs text-gray-950  hover:underline">
-                Date 1
-               </a></td>
-            <td>
-                <a  class="font-medium font-sans text-xs text-gray-950  hover:underline">
-                    Date 2
-                  </a>
+            <td class="border-t-0 px-6 align-center border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
+                 <%= coup.discount %>
             </td>
-            <td>
-                <a  class="font-medium font-sans text-xs text-gray-950  hover:underline">
-                    Code
-                   </a>
+            <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
+              <i class="fas fa-arrow-up text-emerald-500 mr-4"></i>
+               <%= coup.maximumAmount %>
             </td>
-
+            <td class="border-t-0 px-6 align-middle border-l-0 border-r-0 text-xs whitespace-nowrap p-4">
+              <i class="fas fa-arrow-up text-emerald-500 mr-4"></i>
+               <%= coup.expiryDate %>
+            </td>
+          </tr>
+        <% }) %>
         </tbody>
-    </table>
 
-</div>
-  
-<div> 
-    <button id="addCoupon" class="mt-5 border bg-green-600 w-36 h-12 rounded-full hover:bg-cyan-400 text-white">
-        Add Coupon
-    </button>
+      </table>
+    </div>
+  </div>
 </div>
 
-<script>
+</section>
 
-
-const btn = document.getElementById('addCoupon');
-btn.addEventListener('click', () => {
-    fetch('http://localhost:4000/admin/coupon-add') 
-    .then(response => {
-        window.location.href = 'http://localhost:4000/admin/coupon-add'
-    })
-    .then(data => {
-    
-        console.log(data); 
-    })
-    .catch(error => {  
-        console.error('Error fetching coupon data:', error);
-    });
-});
-
-
-</script>
 </main>
 
 
