--- a/views/partials/adminHeader.ejs
+++ b/views/partials/adminHeader.ejs
@@ -1386,6 +1386,12 @@ video {
                 </a>
             </li>
             <li class="mb-5 group  border-b border-gray-300">
+                <a href="/admin/salesReport" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
+                   
+                    <span class="text-sm font-normal">Sales</span>
+                </a>
+            </li>
+            <li class="mb-5 group  border-b border-gray-300">
                 <a href="/admin/admin-logout" class="flex font-semibold items-center py-2 px-4 text-gray-900 hover:bg-gray-950 hover:text-gray-100 rounded-md group-[.active]:bg-gray-800 group-[.active]:text-white group-[.selected]:bg-gray-950 group-[.selected]:text-gray-100">
                
                     <span class="text-sm font-normal">Logout</span>
