admin login bug fixed

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -7,33 +7,31 @@
                     <div class="flex justify-between mb-6">
                         <div>
                             <div class="flex items-center mb-1">
-                                <div class="text-2xl font-semibold"><%= chart[0] %></div>
+                                <div class="text-2xl font-semibold"><%= list[0] %></div>
                             </div>
                             <div class="text-sm font-medium text-gray-400">Users</div>
                         </div>
                     </div>
-                    <a href="./userManagement" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a>
+                    <a href="/admin/userManagement" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a>
                 </div>
                 <div class="bg-white rounded-md border border-gray-100 p-6 shadow-md shadow-black/5">
                     <div class="flex justify-between mb-4">
                         <div>
                             <div class="flex items-center mb-1">
-                                <div class="text-2xl font-semibold"><%= chart[1] %></div>
-                                <!-- <div class="p-1 rounded bg-emerald-500/10 text-emerald-500 text-[12px] font-semibold leading-none ml-2">+30%</div> -->
-                            </div>
+                                <div class="text-2xl font-semibold"><%= list[1] %></div>                 </div>
                             <div class="text-sm font-medium text-gray-400">Brands</div>
                         </div>
                     </div>
-                    <a href="/dierenartsen" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a>
+                    <a href="/admin/product-list" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a>
                 </div>
                 <div class="bg-white rounded-md border border-gray-100 p-6 shadow-md shadow-black/5">
                     <div class="flex justify-between mb-6">
                         <div>
-                            <div class="text-2xl font-semibold mb-1"><%= chart[2] %></div>
+                            <div class="text-2xl font-semibold mb-1"><%= list[2] %></div>
                             <div class="text-sm font-medium text-gray-400">Categories</div>
                         </div>
                     </div>
-                    <a href="./category-list" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a>
+                    <a href="/admin/category-list" class="text-[#f84525] font-medium text-sm hover:text-red-800">View</a>
                 </div>
             </div>
                 <!-- Graph 1 -->
